--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,6 +29,7 @@ def COMPILE_SDK_VERSION = 33
 def TARGET_SDK_VERSION = 33
 
 android {
+    namespace = "sqip.flutter"
     def sqipCompileSdkVersion = rootProject.hasProperty('sqipCompileSdkVersion') ? rootProject.sqipCompileSdkVersion : COMPILE_SDK_VERSION
     def sqipTargetSdkVersion = rootProject.hasProperty('sqipTargetSdkVersion') ? rootProject.sqipTargetSdkVersion : TARGET_SDK_VERSION
     compileSdkVersion sqipCompileSdkVersion
